// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`meta-alarm-rule-general-form Renders \`meta-alarm-rule-general-form\` with custom props 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="layout gap-2"
  >
    <c-id-field-stub
      autofocus=""
      help-text="If no id is specified, a unique id will be generated automatically on rule creation"
      value=""
    />
    <c-name-field-stub
      required=""
      value=""
    />
  </div>
  <c-form-block>
    <c-form-block-row
      label="Output template"
    >
      <c-payload-textarea-field-stub
        help-text="<p>The accessible variables are:</p><p><strong>.Count</strong>: The number of consequence alarms attached to the meta alarm.</p><p><strong>.Children</strong>: The set of variables of the last consequence alarm attached to the meta alarm.</p><p><strong>.Rule</strong>: The administrative information of the meta alarm itself.</p><p>For example:</p><p>Count: <strong>{{ .Count }};</strong> Children: <strong>{{ .Children.Alarm.Value.State.Message }};</strong> Rule: <strong>{{ .Rule.Name }};</strong></p><p>A static informative message</p><p>Correlated by the rule <strong>{{ .Rule.Name }}</strong></p>"
        label="Output template"
        required=""
        value="{{ .LastChild.Alarm.Value.State.Message }}"
      />
    </c-form-block-row>
    <c-form-block-row
      label="metaAlarmRule.tags"
    >
      <meta-alarm-rule-tags-form-stub
        class="mb-4"
        form="[object Object]"
        variables=""
      />
    </c-form-block-row>
    <c-form-block-row
      label="metaAlarmRule.infos"
    >
      <meta-alarm-rule-infos-form-stub
        infos=""
      />
    </c-form-block-row>
    <c-form-block-row
      label="Auto resolve"
    >
      <c-enabled-field-stub
        label="Auto resolve"
      />
    </c-form-block-row>
    <c-form-block-row
      indented=""
      label="metaAlarmRule.grouping"
    >
      <div
        class="v-tabs meta-alarm-rule-type-field v-tabs--fixed-tabs theme--light"
      >
        <div
          class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text"
          role="tablist"
        >
          <div
            class="v-slide-group__prev v-slide-group__prev--disabled"
          >
            <transition-stub
              name="fade-transition"
            />
          </div>
          <div
            class="v-slide-group__wrapper"
          >
            <div
              class="v-slide-group__content v-tabs-bar__content"
            >
              <div
                aria-selected="true"
                class="v-tab v-tab--active"
                role="tab"
                tabindex="0"
              >
                <button
                  class="v-btn v-btn--has-bg theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
      metaAlarmRule.groupingTabs.existing
                  </span>
                </button>
              </div>
              <div
                aria-selected="false"
                class="v-tab"
                role="tab"
                tabindex="0"
              >
                <button
                  class="v-btn v-btn--has-bg theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
      metaAlarmRule.groupingTabs.createNew
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="v-slide-group__next v-slide-group__next--disabled"
          >
            <transition-stub
              name="fade-transition"
            />
          </div>
        </div>
        <div
          class="v-window v-item-group theme--light v-tabs-items"
        >
          <div
            class="v-window__container"
          >
            <transition-stub
              name=""
            >
              <!---->
            </transition-stub>
            <transition-stub
              name=""
            >
              <!---->
            </transition-stub>
          </div>
        </div>
      </div>
    </c-form-block-row>
    <c-form-block-row
      label="Component template"
    >
      <c-payload-text-field
        label="Component template"
      />
    </c-form-block-row>
    <c-form-block-row
      label="Resource template"
    >
      <c-payload-text-field
        label="Resource template"
      />
    </c-form-block-row>
  </c-form-block>
</div>
`;

exports[`meta-alarm-rule-general-form Renders \`meta-alarm-rule-general-form\` with default props 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="layout gap-2"
  >
    <c-id-field-stub
      autofocus=""
      help-text="If no id is specified, a unique id will be generated automatically on rule creation"
    />
    <c-name-field-stub
      required=""
    />
  </div>
  <c-form-block>
    <c-form-block-row
      label="Output template"
    >
      <c-payload-textarea-field-stub
        help-text="<p>The accessible variables are:</p><p><strong>.Count</strong>: The number of consequence alarms attached to the meta alarm.</p><p><strong>.Children</strong>: The set of variables of the last consequence alarm attached to the meta alarm.</p><p><strong>.Rule</strong>: The administrative information of the meta alarm itself.</p><p>For example:</p><p>Count: <strong>{{ .Count }};</strong> Children: <strong>{{ .Children.Alarm.Value.State.Message }};</strong> Rule: <strong>{{ .Rule.Name }};</strong></p><p>A static informative message</p><p>Correlated by the rule <strong>{{ .Rule.Name }}</strong></p>"
        label="Output template"
        required=""
      />
    </c-form-block-row>
    <c-form-block-row
      label="metaAlarmRule.tags"
    >
      <meta-alarm-rule-tags-form-stub
        class="mb-4"
        form="[object Object]"
        variables=""
      />
    </c-form-block-row>
    <c-form-block-row
      label="metaAlarmRule.infos"
    >
      <meta-alarm-rule-infos-form-stub
        infos=""
      />
    </c-form-block-row>
    <c-form-block-row
      label="Auto resolve"
    >
      <c-enabled-field-stub
        label="Auto resolve"
      />
    </c-form-block-row>
    <c-form-block-row
      indented=""
      label="metaAlarmRule.grouping"
    >
      <div
        class="v-tabs meta-alarm-rule-type-field v-tabs--fixed-tabs theme--light"
      >
        <div
          class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text"
          role="tablist"
        >
          <div
            class="v-slide-group__prev v-slide-group__prev--disabled"
          >
            <transition-stub
              name="fade-transition"
            />
          </div>
          <div
            class="v-slide-group__wrapper"
          >
            <div
              class="v-slide-group__content v-tabs-bar__content"
            >
              <div
                aria-selected="true"
                class="v-tab v-tab--active"
                role="tab"
                tabindex="0"
              >
                <button
                  class="v-btn v-btn--has-bg theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
      metaAlarmRule.groupingTabs.existing
                  </span>
                </button>
              </div>
              <div
                aria-selected="false"
                class="v-tab"
                role="tab"
                tabindex="0"
              >
                <button
                  class="v-btn v-btn--has-bg theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
      metaAlarmRule.groupingTabs.createNew
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="v-slide-group__next v-slide-group__next--disabled"
          >
            <transition-stub
              name="fade-transition"
            />
          </div>
        </div>
        <div
          class="v-window v-item-group theme--light v-tabs-items"
        >
          <div
            class="v-window__container"
          >
            <transition-stub
              name=""
            >
              <!---->
            </transition-stub>
            <transition-stub
              name=""
            >
              <!---->
            </transition-stub>
          </div>
        </div>
      </div>
    </c-form-block-row>
    <!---->
  </c-form-block>
</div>
`;
